crates/monochange/src/__tests__/snapshots/monochange__mcp__tests__affected_packages_reports_failed_policy_for_uncovered_changes@affected_packages_reports_failed_policy_for_uncovered_changes.snap
---
source: crates/monochange/src/__tests__/mcp_tests.rs
expression: redacted
---
{
  "action": "affected_packages",
  "evaluation": {
    "affected_package_ids": [
      "core"
    ],
    "changed_paths": [
      "crates/core/src/lib.rs"
    ],
    "changeset_paths": [],
    "comment": "[multiline text]",
    "covered_package_ids": [],
    "enforce": false,
    "errors": [
      "changed packages are not covered by attached changesets: core"
    ],
    "ignored_paths": [],
    "labels": [],
    "matched_paths": [
      "crates/core/src/lib.rs"
    ],
    "matched_skip_labels": [],
    "required": true,
    "status": "failed",
    "summary": "changeset verification failed: attached changesets do not cover 1 changed package",
    "uncovered_package_ids": [
      "core"
    ]
  },
  "ok": false,
  "summary": "changeset verification failed: attached changesets do not cover 1 changed package"
}
