crates/monochange/src/__tests__/snapshots/monochange__mcp__tests__affected_packages_reports_success_for_documentation_only_changes@affected_packages_reports_success_for_documentation_only_changes.snap
---
source: crates/monochange/src/__tests__/mcp_tests.rs
assertion_line: 655
expression: content_text(&result)
---
{
  "action": "affected_packages",
  "evaluation": {
    "affected_package_ids": [],
    "changed_paths": [
      "docs/readme.md"
    ],
    "changeset_paths": [],
    "comment": null,
    "covered_package_ids": [],
    "enforce": false,
    "errors": [],
    "ignored_paths": [],
    "labels": [
      "no-changeset-required"
    ],
    "matched_paths": [],
    "matched_skip_labels": [
      "no-changeset-required"
    ],
    "required": false,
    "status": "skipped",
    "summary": "changeset verification skipped because the change has an allowed label: no-changeset-required",
    "uncovered_package_ids": []
  },
  "ok": true,
  "summary": "changeset verification skipped because the change has an allowed label: no-changeset-required"
}
