crates/monochange/src/__tests__/snapshots/monochange__mcp__tests__agent_eval_release_workflow_stays_machine_readable@agent_eval_release_workflow_stays_machine_readable.snap
---
source: crates/monochange/src/__tests__/mcp_tests.rs
expression: redacted
---
{
  "diagnostics": {
    "action": "diagnostics",
    "ok": true,
    "report": {
      "changesets": [
        {
          "context": {
            "capabilities": {
              "actor_profiles": false,
              "commit_web_urls": false,
              "issue_comments": false,
              "related_issues": false,
              "review_request_lookup": false
            },
            "host": null,
            "introduced": null,
            "last_updated": null,
            "provider": "generic_git",
            "related_issues": []
          },
          "details": null,
          "path": ".changeset/feature.md",
          "summary": "Add feature",
          "targets": [
            {
              "bump": "patch",
              "change_type": "patch",
              "evidence_refs": [],
              "id": "core",
              "kind": "package",
              "origin": "direct-change"
            }
          ]
        }
      ],
      "requested_changesets": [
        ".changeset/feature.md"
      ]
    },
    "summary": "Loaded 1 changeset diagnostic record(s)."
  },
  "discover": {
    "action": "discover",
    "ok": true,
    "report": {
      "dependencies": [],
      "packages": [
        {
          "current_version": "1.0.0",
          "declared_dependencies": [],
          "ecosystem": "cargo",
          "id": "cargo:crates/core/Cargo.toml",
          "manifest_path": "[ROOT]/crates/core/Cargo.toml",
          "metadata": {
            "config_id": "core"
          },
          "name": "core",
          "publish_state": "public",
          "version_group_id": null,
          "workspace_root": "[ROOT]
        }
      ],
      "version_groups": [],
      "warnings": [],
      "workspace_root": "[ROOT]
    },
    "summary": "Discovered 1 package(s) and 0 dependency edge(s)."
  },
  "release_manifest": {
    "action": "release_manifest",
    "manifest": {
      "changed_files": [
        "Cargo.toml",
        "crates/core/Cargo.toml"
      ],
      "changelogs": [],
      "changesets": [
        {
          "context": {
            "capabilities": {
              "actor_profiles": false,
              "commit_web_urls": false,
              "issue_comments": false,
              "related_issues": false,
              "review_request_lookup": false
            },
            "host": null,
            "introduced": null,
            "last_updated": null,
            "provider": "generic_git",
            "related_issues": []
          },
          "details": null,
          "path": ".changeset/feature.md",
          "summary": "Add feature",
          "targets": [
            {
              "bump": "patch",
              "change_type": "patch",
              "evidence_refs": [],
              "id": "core",
              "kind": "package",
              "origin": "direct-change"
            }
          ]
        }
      ],
      "command": "release-manifest",
      "deleted_changesets": [],
      "dry_run": true,
      "group_version": null,
      "package_publications": [
        {
          "ecosystem": "cargo",
          "mode": "builtin",
          "package": "core",
          "registry": "crates_io",
          "trusted_publishing": {
            "enabled": true,
            "environment": null,
            "mode": "required",
            "repository": null,
            "workflow": null
          },
          "version": "1.0.1"
        }
      ],
      "plan": {
        "compatibility_evidence": [],
        "decisions": [
          {
            "bump": "patch",
            "package": "cargo:crates/core/Cargo.toml",
            "planned_version": "1.0.1",
            "reasons": [
              "Add feature"
            ],
            "trigger": "direct-change",
            "upstream_sources": [
              "cargo:crates/core/Cargo.toml"
            ]
          }
        ],
        "groups": [],
        "unresolved_items": [],
        "warnings": [],
        "workspace_root": "."
      },
      "release_targets": [
        {
          "id": "core",
          "kind": "package",
          "members": [
            "core"
          ],
          "release": false,
          "rendered_changelog_title": "core 1.0.1 ([DATE])",
          "rendered_title": "core v1.0.1 ([DATE])",
          "tag": false,
          "tag_name": "core/v1.0.1",
          "version": "1.0.1",
          "version_format": "namespaced"
        }
      ],
      "released_packages": [
        "core"
      ],
      "version": "1.0.1"
    },
    "ok": true,
    "summary": "Generated dry-run release manifest with 1 release target(s)."
  }
}
