crates/monochange/src/__tests__/snapshots/monochange__mcp__tests__analyze_changes_returns_semantic_diff_for_cargo_workspace.snap
---
source: crates/monochange/src/__tests__/mcp_tests.rs
expression: content_text(&result)
---
{
  "action": "analyze_changes",
  "analysis": {
    "detection_level": "signature",
    "frame": "WorkingDirectory",
    "package_analyses": {
      "core": {
        "analyzer_id": "cargo/public-api",
        "changed_files": [
          "Cargo.toml",
          "src/lib.rs"
        ],
        "ecosystem": "cargo",
        "package_id": "core",
        "package_name": "core",
        "package_record_id": "cargo:crates/core/Cargo.toml",
        "semantic_changes": [
          {
            "after_signature": "pub struct Greeter ;",
            "before_signature": null,
            "category": "public_api",
            "file_path": "src/lib.rs",
            "item_kind": "struct",
            "item_path": "Greeter",
            "kind": "added",
            "summary": "struct `Greeter` added"
          },
          {
            "after_signature": "fn greet (name : & str) -> String",
            "before_signature": "fn greet () -> & 'static str",
            "category": "public_api",
            "file_path": "src/lib.rs",
            "item_kind": "function",
            "item_path": "greet",
            "kind": "modified",
            "summary": "function `greet` modified"
          },
          {
            "after_signature": "[dependencies] 0.1",
            "before_signature": null,
            "category": "dependency",
            "file_path": "Cargo.toml",
            "item_kind": "dependency",
            "item_path": "tracing",
            "kind": "added",
            "summary": "dependency `tracing` added"
          },
          {
            "after_signature": "",
            "before_signature": null,
            "category": "metadata",
            "file_path": "Cargo.toml",
            "item_kind": "feature",
            "item_path": "feature.cli",
            "kind": "added",
            "summary": "feature `feature.cli` added"
          },
          {
            "after_signature": "cli",
            "before_signature": "",
            "category": "metadata",
            "file_path": "Cargo.toml",
            "item_kind": "feature",
            "item_path": "feature.default",
            "kind": "modified",
            "summary": "feature `feature.default` modified"
          },
          {
            "after_signature": "2024",
            "before_signature": "2021",
            "category": "metadata",
            "file_path": "Cargo.toml",
            "item_kind": "manifest_field",
            "item_path": "package.edition",
            "kind": "modified",
            "summary": "manifest_field `package.edition` modified"
          }
        ],
        "warnings": []
      }
    },
    "warnings": []
  },
  "frame": "working directory",
  "ok": true,
  "summary": "Analyzed 1 package(s) and found 6 semantic change(s)"
}
