crates/monochange/src/__tests__/snapshots/monochange__mcp__tests__diagnostics_returns_changeset_context@diagnostics_returns_changeset_context.snap
---
source: crates/monochange/src/__tests__/mcp_tests.rs
expression: content_text(&result)
---
{
  "action": "diagnostics",
  "ok": true,
  "report": {
    "changesets": [
      {
        "context": {
          "capabilities": {
            "actor_profiles": false,
            "commit_web_urls": false,
            "issue_comments": false,
            "related_issues": false,
            "review_request_lookup": false
          },
          "host": null,
          "introduced": null,
          "last_updated": null,
          "provider": "generic_git",
          "related_issues": []
        },
        "details": null,
        "path": ".changeset/feature.md",
        "summary": "Add feature",
        "targets": [
          {
            "bump": "patch",
            "change_type": "patch",
            "evidence_refs": [],
            "id": "core",
            "kind": "package",
            "origin": "direct-change"
          }
        ]
      }
    ],
    "requested_changesets": [
      ".changeset/feature.md"
    ]
  },
  "summary": "Loaded 1 changeset diagnostic record(s)."
}
