crates/monochange/src/__tests__/snapshots/monochange__mcp__tests__release_manifest_returns_dry_run_manifest@release_manifest_returns_dry_run_manifest.snap
---
source: crates/monochange/src/__tests__/mcp_tests.rs
expression: redacted
---
{
  "action": "release_manifest",
  "manifest": {
    "changed_files": [
      "Cargo.toml",
      "changelog.md",
      "crates/app/Cargo.toml",
      "crates/app/changelog.md",
      "crates/core/Cargo.toml",
      "crates/core/changelog.md",
      "crates/core/extra.toml",
      "group.toml"
    ],
    "changelogs": [
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "[multiline text]"
              ],
              "title": "Features"
            }
          ],
          "summary": [
            "Grouped release for `sdk`."
          ],
          "title": "1.1.0 ([DATE])"
        },
        "output": "default",
        "owner_id": "sdk",
        "owner_kind": "group",
        "path": "changelog.md",
        "rendered": "[multiline text]",
        "stream": "default"
      },
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "- **No package-specific changes were recorded; `workflow-app` was updated to 1.1.0 as part of group `sdk`.**"
              ],
              "title": "Changed"
            }
          ],
          "summary": [],
          "title": "1.1.0 ([DATE])"
        },
        "output": "default",
        "owner_id": "app",
        "owner_kind": "package",
        "path": "crates/app/changelog.md",
        "rendered": "[multiline text]",
        "stream": "default"
      },
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "- **add release command.**"
              ],
              "title": "Features"
            }
          ],
          "summary": [],
          "title": "1.1.0 ([DATE])"
        },
        "output": "default",
        "owner_id": "core",
        "owner_kind": "package",
        "path": "crates/core/changelog.md",
        "rendered": "[multiline text]",
        "stream": "default"
      }
    ],
    "changesets": [
      {
        "context": {
          "capabilities": {
            "actor_profiles": false,
            "commit_web_urls": false,
            "issue_comments": false,
            "related_issues": false,
            "review_request_lookup": false
          },
          "host": null,
          "introduced": null,
          "last_updated": null,
          "provider": "generic_git",
          "related_issues": []
        },
        "details": null,
        "path": ".changeset/feature.md",
        "summary": "add release command",
        "targets": [
          {
            "bump": "minor",
            "change_type": "minor",
            "evidence_refs": [],
            "id": "core",
            "kind": "package",
            "origin": "direct-change"
          }
        ]
      }
    ],
    "command": "release-manifest",
    "deleted_changesets": [],
    "dry_run": true,
    "group_version": "1.1.0",
    "package_publications": [
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "app",
        "registry": "crates_io",
        "trusted_publishing": {
          "enabled": true,
          "environment": null,
          "mode": "required",
          "repository": null,
          "workflow": null
        },
        "version": "1.1.0"
      },
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "core",
        "registry": "crates_io",
        "trusted_publishing": {
          "enabled": true,
          "environment": null,
          "mode": "required",
          "repository": null,
          "workflow": null
        },
        "version": "1.1.0"
      }
    ],
    "plan": {
      "compatibility_evidence": [],
      "decisions": [
        {
          "bump": "minor",
          "package": "cargo:crates/app/Cargo.toml",
          "planned_version": "1.1.0",
          "reasons": [
            "depends on `cargo:crates/core/Cargo.toml`",
            "shares version group `sdk`"
          ],
          "trigger": "version-group-synchronization",
          "upstream_sources": [
            "cargo:crates/core/Cargo.toml"
          ]
        },
        {
          "bump": "minor",
          "package": "cargo:crates/core/Cargo.toml",
          "planned_version": "1.1.0",
          "reasons": [
            "add release command",
            "shares version group `sdk`"
          ],
          "trigger": "direct-change",
          "upstream_sources": [
            "cargo:crates/core/Cargo.toml"
          ]
        }
      ],
      "groups": [
        {
          "bump": "minor",
          "id": "sdk",
          "members": [
            "cargo:crates/core/Cargo.toml",
            "cargo:crates/app/Cargo.toml"
          ],
          "planned_version": "1.1.0"
        }
      ],
      "unresolved_items": [],
      "warnings": [],
      "workspace_root": "."
    },
    "release_targets": [
      {
        "id": "sdk",
        "kind": "group",
        "members": [
          "core",
          "app"
        ],
        "release": true,
        "rendered_changelog_title": "1.1.0 ([DATE])",
        "rendered_title": "v1.1.0 ([DATE])",
        "tag": true,
        "tag_name": "v1.1.0",
        "version": "1.1.0",
        "version_format": "primary"
      }
    ],
    "released_packages": [
      "workflow-app",
      "workflow-core"
    ],
    "version": "1.1.0"
  },
  "ok": true,
  "summary": "Generated dry-run release manifest with 1 release target(s)."
}
